--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -12,7 +12,7 @@
 			<div class="my-3 my-md-5">
 				<div class="container">
 					<div class="page-header">
-						<h1 class="page-title">page.page-title</h1>
+						<h1 class="page-title">{{ .pagetitle }}</h1>
 					</div>
 				</div>
 				{{ template "content" . }}
