--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -7,14 +7,12 @@
 			</a>
 
 			<div class="d-flex order-lg-2 ml-auto">
-				<div class="nav-item d-none d-md-flex">
-					<a href="/" class="btn btn-sm btn-outline-primary" target="_blank">Source code</a>
-				</div>
 				<div class="dropdown d-none d-md-flex">
 					<a class="nav-link icon" data-toggle="dropdown">
 						<i class="fe fe-bell"></i>
 						<span class="nav-unread"></span>
 					</a>
+					<!-- events.begin -->
 					<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
 						<a href="#" class="dropdown-item d-flex">
 							<span class="avatar mr-3 align-self-center" style="background-image: url(site.data.users[1].photo)"></span>
@@ -40,6 +38,7 @@
 						<div class="dropdown-divider"></div>
 						<a href="#" class="dropdown-item text-center">Mark all as read</a>
 					</div>
+					<!-- events.end -->
 				</div>
 				<div class="dropdown">
 					<a href="#" class="nav-link pr-0 leading-none" data-toggle="dropdown">
