--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -23,11 +23,8 @@
 <script src="/assets/js/require.min.js"></script>
 <script>
     requirejs.config({
-        baseUrl: '/'
+        baseUrl: '.'
     });
 </script>
-
-<!-- Dashboard Core -->
-<link href="/assets/css/dashboard.css" rel="stylesheet" />
-<script src="/assets/js/dashboard.js"></script>
+{{ template "special" . }}
 {{ end }}
