--- a/templates/views/index.html
+++ b/templates/views/index.html
@@ -1,4 +1,4 @@
-{{ template "default" }}
+{{ template "default" . }}
 {{ define "special" }}
 	<!-- Dashboard Core -->
 	<link href="/assets/css/dashboard.css" rel="stylesheet" />
