--- a/templates/views/403.html
+++ b/templates/views/403.html
@@ -1,4 +1,6 @@
-{{ template "single" }}
+{{ template "single" . }}
+{{ define "content" }}
+{{ end }}
 <!doctype html>
 <html lang="en" dir="ltr">
   <head>
