--- a/templates/views/cards.html
+++ b/templates/views/cards.html
@@ -1,4 +1,6 @@
-{{ template "default" }}
+{{ template "default" . }}
+{{ define "content" }}
+{{ end }}
 <!doctype html>
 <html lang="en" dir="ltr">
   <head>
