--- a/templates/layouts/single.html
+++ b/templates/layouts/single.html
@@ -1,18 +1,24 @@
 {{ define "single" }}
-{{ template "layout" . }}
-{{ end }}
+<!doctype html>
+<html lang="en" dir="ltr">
 
-{{ define "page" }}
+<head>
+	{{ template "head" . }}
+</head>
+
+<body class="">
+	<div class="page">
 		<div class="page-single">
 			<div class="container">
 				<div class="row">
 					<div class="col col-login mx-auto">
-						<div class="text-center mb-6">
-							<img src="./demo/brand/tabler.svg" class="h-6" alt="">
-						</div>
 						{{ template "content" . }}
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+</body>
+
+</html>
 {{ end }}
