--- a/templates/views/index.html
+++ b/templates/views/index.html
@@ -1,4 +1,6 @@
+{{ define "index.html" }}
 {{ template "default" . }}
+{{ end }}
 {{ define "special" }}
 	<!-- Dashboard Core -->
 	<link href="/assets/css/dashboard.css" rel="stylesheet" />
