登录页面title设置

--- a/templates/views/login.html
+++ b/templates/views/login.html
@@ -1,4 +1,5 @@
 {{ template "single" . }}
+{{ define "title" }}Login to your account{{ end }}
 {{ define "special" }}
 	<!-- Dashboard Core -->
 	<link href="./assets/css/dashboard.css" rel="stylesheet" />
