--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -79,21 +79,5 @@
 		</div>
 	</div>
 </div>
-
-<div class="header collapse d-lg-flex p-0" id="headerMenuCollapse">
-	<div class="container">
-		<div class="row align-items-center">
-			<div class="col-lg-3 ml-auto">
-				<form class="input-icon my-3 my-lg-0">
-					<input type="search" class="form-control header-search" placeholder="Search&hellip;" tabindex="1">
-					<div class="input-icon-addon">
-						<i class="fe fe-search"></i>
-					</div>
-				</form>
-			</div>
-			<div class="col-lg order-lg-first">
-			</div>
-		</div>
-	</div>
-</div>
+{{ template "menu" . }}
 {{ end }}
