--- a/templates/views/login.html
+++ b/templates/views/login.html
@@ -1,5 +1,4 @@
 {{ template "single" . }}
-{{ define "title" }}Login to your account{{ end }}
 {{ define "special" }}
 	<!-- Dashboard Core -->
 	<link href="./assets/css/dashboard.css" rel="stylesheet" />
@@ -13,64 +12,71 @@
 	<!-- Input Mask Plugin -->
 	<script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
-
 {{ define "content" }}
-<form class="card">
-	<div class="card-body p-6">
-		<div class="card-title">Login to your account</div>
-
-		<div class="form-group">
-			<label class="form-label">Email address</label>
-			<input type="input" class="form-control" id="user" aria-describedby="emailHelp" placeholder="Enter user name">
+		<div class="page-single">
+			<div class="container">
+				<div class="row">
+					<div class="col col-login mx-auto">
+						<form class="card">
+							<div class="card-body p-6">
+								<div class="card-title">Login to your account</div>
+			
+								<div class="form-group">
+									<label class="form-label">Email address</label>
+									<input type="input" class="form-control" id="user" aria-describedby="emailHelp" placeholder="Enter user name">
+								</div>
+								<div class="form-group">
+									<label class="form-label">
+										Password
+										<a href="/forgot-password.html" class="float-right small">I forgot password</a>
+									</label>
+									<input type="password" class="form-control" id="password" placeholder="Password">
+								</div>
+								<div class="form-group">
+									<label class="custom-control custom-checkbox">
+										<input type="checkbox" class="custom-control-input" />
+										<span class="custom-control-label">Remember me</span>
+									</label>
+								</div>
+			
+								<div class="form-footer">
+									<input type="hidden" id="fcsrf" value="{{ .csrf }}">
+									<button type="button" id="submit" class="btn btn-primary btn-block">Sign in</button>
+								</div>
+							</div>
+						</form>
+			
+						<div class="text-center text-muted">
+							Don't have account yet? <a href="/register.html">Sign up</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="form-group">
-			<label class="form-label">
-				Password
-				<a href="/forgot-password.html" class="float-right small">I forgot password</a>
-			</label>
-			<input type="password" class="form-control" id="password" placeholder="Password">
-		</div>
-		<div class="form-group">
-			<label class="custom-control custom-checkbox">
-				<input type="checkbox" class="custom-control-input" />
-				<span class="custom-control-label">Remember me</span>
-			</label>
-		</div>
-
-		<div class="form-footer">
-			<input type="hidden" id="fcsrf" value="{{ .csrf }}">
-			<button type="button" id="submit" class="btn btn-primary btn-block">Sign in</button>
-		</div>
-	</div>
-</form>
-
-<div class="text-center text-muted">
-	Don't have account yet? <a href="/register.html">Sign up</a>
-</div>
-<script type="text/javascript">
-requirejs(['jquery'], function ($) {
-	$("#submit").click(function () {
-		$.ajax({
-			type: "POST",
-			url: "/login.html",
-			data: {
-				user: $("#user").val(),
-				password: $("#password").val()
-			},
-			beforeSend: function (xhr) {
-				xhr.setRequestHeader("X-CSRF-Token", $("#fcsrf").val());
-			},
-			async: false,
-			cache: false,
-			success: function (data) {
-				window.location.href = "/index.html";
-			},
-			error: function (xhr, status, text) {
-				// TODO:
-				alert("Wrong login name or password.");
-			}
-		});
-	});
-})
-</script>
+		<script type="text/javascript">
+			requirejs(['jquery'], function ($) {
+				$("#submit").click(function () {
+					$.ajax({
+						type: "POST",
+						url: "/login.html",
+						data: {
+							user: $("#user").val(),
+							password: $("#password").val()
+						},
+						beforeSend: function (xhr) {
+							xhr.setRequestHeader("X-CSRF-Token", $("#fcsrf").val());
+						},
+						async: false,
+						cache: false,
+						success: function (data) {
+							window.location.href = "/index.html";
+						},
+						error: function (xhr, status, text) {
+							// TODO:
+							alert("Wrong login name or password.");
+						}
+					});
+				});
+			})
+		</script>
 {{ end }}
