增加页面和路由

--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -21,6 +21,7 @@
 											<a href="./cards.html" class="dropdown-item ">Cards design</a>
 											<a href="./charts.html" class="dropdown-item ">Charts</a>
 											<a href="./pricing-cards.html" class="dropdown-item ">Pricing cards</a>
+											<a href="./crypto-currencies.html" class="dropdown-item ">Crypto Currencies</a>
 										</div>
 									</li>
 									<li class="nav-item dropdown">
@@ -31,6 +32,10 @@
 											<a href="./store.html" class="dropdown-item ">Store</a>
 											<a href="./blog.html" class="dropdown-item ">Blog</a>
 											<a href="./carousel.html" class="dropdown-item ">Carousel</a>
+											<a href="./pagination.html" class="dropdown-item ">Pagination</a>
+											<a href="./invoice.html" class="dropdown-item ">Invoice</a>
+											<a href="./users-list.html" class="dropdown-item ">Users list</a>
+											<a href="./lookup.html" class="dropdown-item ">Lookup</a>
 										</div>
 									</li>
 									<li class="nav-item dropdown">
