模板问题修复，增加菜单和路由

--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -13,11 +13,12 @@
 			<div class="my-3 my-md-5">
 				<div class="container">
 					{{ block "page-title" . }}{{ end }}
-					{{ template "content" . }}
+					{{ block "content" . }}{{ end }}
 				</div>
 			</div>
 		</div>
-		{{ template "footer-sub" . }} {{ template "footer" . }}
+		{{ template "footer-sub" . }}
+		{{ template "footer" . }}
 	</div>
 </body>
 
