--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -36,6 +36,7 @@
 											<a href="./invoice.html" class="dropdown-item ">Invoice</a>
 											<a href="./users-list.html" class="dropdown-item ">Users list</a>
 											<a href="./lookup.html" class="dropdown-item ">Lookup</a>
+											<a href="./sample-cards.html" class="dropdown-item ">Sample cards</a>
 										</div>
 									</li>
 									<li class="nav-item dropdown">
