--- a/templates/views/empty.html
+++ b/templates/views/empty.html
@@ -12,5 +12,4 @@
 <!-- Input Mask Plugin -->
 <script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
-{{ define "content" }}
-{{ end }}
+{{ define "content" }}{{ end }}
