--- a/templates/views/maps.html
+++ b/templates/views/maps.html
@@ -12,6 +12,7 @@
 <!-- Input Mask Plugin -->
 <script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
+{{ define "page-title" }}{{ end }}
 {{ define "content" }}
 						<div class="row row-cards">
 							<div class="col-lg-4 col-md-6">
