--- a/templates/views/users-list.html
+++ b/templates/views/users-list.html
@@ -12,6 +12,12 @@
 <!-- Input Mask Plugin -->
 <script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
+{{ define "page-title" }}
+						<div class="page-header">
+							<h1 class="page-title">Users</h1>
+							<div class="page-subtitle">1 - 12 of 1713 photos</div>
+						</div>
+{{ end }}
 {{ define "content" }}
 						<div class="row row-cards">
 							<div class="col-lg-4">
