--- a/templates/views/blog.html
+++ b/templates/views/blog.html
@@ -12,6 +12,11 @@
 <!-- Input Mask Plugin -->
 <script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
+{{ define "page-title" }}
+						<div class="page-header">
+							<h1 class="page-title">Blog components</h1>
+						</div>
+{{ end }}
 {{ define "content" }}
 						<div class="row row-cards row-deck">
 							<div class="col-sm-6 col-xl-3">
