--- a/templates/views/crypto-currencies.html
+++ b/templates/views/crypto-currencies.html
@@ -12,6 +12,11 @@
 <!-- Input Mask Plugin -->
 <script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
+{{ define "page-title" }}
+						<div class="page-header">
+							<h1 class="page-title">Crypto currencies</h1>
+						</div>
+{{ end }}
 {{ define "content" }}
 						<div class="card">
 							<table class="table card-table">
