--- a/templates/views/docs/alerts.html
+++ b/templates/views/docs/alerts.html
@@ -13,11 +13,9 @@
 <script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
 {{ define "page-title" }}
-			<div class="page-header">
-				<h1 class="page-title">
-					Documentation
-				</h1>
-			</div>
+						<div class="page-header">
+							<h1 class="page-title">Documentation</h1>
+						</div>
 {{ end }}
 {{ define "content" }}
 						<div class="row">
