--- a/templates/views/docs/tags.html
+++ b/templates/views/docs/tags.html
@@ -12,11 +12,9 @@
 <!-- Input Mask Plugin -->
 <script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
-{{ define "page-header" }}
+{{ define "page-title" }}
 						<div class="page-header">
-							<h1 class="page-title">
-								Documentation
-							</h1>
+							<h1 class="page-title">Documentation</h1>
 						</div>
 {{ end }}
 {{ define "content" }}
