--- a/templates/views/lookup.html
+++ b/templates/views/lookup.html
@@ -12,6 +12,11 @@
 <!-- Input Mask Plugin -->
 <script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
+{{ define "page-title" }}
+						<div class="page-header">
+							<h1 class="page-title">Lookup company</h1>
+						</div>
+{{ end }}
 {{ define "content" }}
 						<div class="row">
 							<div class="col-3">
