--- a/templates/views/sample-cards.html
+++ b/templates/views/sample-cards.html
@@ -12,7 +12,7 @@
 <!-- Input Mask Plugin -->
 <script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
-{{ define "page-header" }}
+{{ define "page-title" }}
 						<div class="page-header">
 							<div>
 								<h1 class="page-title">Dashboard</h1>
@@ -1188,7 +1188,7 @@
 												</div>
 											</div>
 											<div class="col-6">
-												<div class="chart-circle" data-value="0.3" data-thickness="8" data-color="{" hex "=>"#f8b700 ", "name "=>"Warning "}">
+												<div class="chart-circle" data-value="0.3" data-thickness="8" data-color='{" hex "=>"#f8b700 ", "name "=>"Warning "}'>
 													<div class="chart-circle-value">1350 <small>tasks</small></div>
 												</div>
 											</div>
@@ -1554,7 +1554,7 @@
 									<div class="card-body">
 										<div class="card-value float-right text-warning">
 											<div class="sparkline" data-sparkline="[10.5, 5.1, 14.7, 18.5, 2.5, 59.5, 79.6, 35.3, 70.1, 1.4, 8.1, 30.9, 31.8, 36.4, 28.8, 91.3]"
-											 data-sparkline-color="{" hex "=>"#467fcf ", "name "=>"Blue "}" data-sparkline-type="bar"></div>
+											 data-sparkline-color='{" hex "=>"#467fcf ", "name "=>"Blue "}' data-sparkline-type="bar"></div>
 										</div>
 										<h3 class="mb-1">$10M <i class="mdi mdi-trending-up text-success"></i></h3>
 										<div class="text-muted">Profit for this month</div>
@@ -1564,7 +1564,7 @@
 									<div class="card-body">
 										<div class="card-value float-right text-warning">
 											<div class="sparkline" data-sparkline="[67.8, 57.4, 38.2, 77.9, 36.4, 39.0, 85.9, 24.9, 4.7, 40.6, 8.7, 36.9, 14.2, 53.0, 64.7, 28.2]"
-											 data-sparkline-color="{" hex "=>"#e74c3c ", "name "=>"Red "}" data-sparkline-type="line"></div>
+											 data-sparkline-color='{" hex "=>"#e74c3c ", "name "=>"Red "}' data-sparkline-type="line"></div>
 										</div>
 										<h3 class="mb-1">$10M <i class="mdi mdi-trending-up text-success"></i></h3>
 										<div class="text-muted">Profit for this month</div>
