--- a/templates/views/docs/avatars.html
+++ b/templates/views/docs/avatars.html
@@ -12,6 +12,13 @@
 <!-- Input Mask Plugin -->
 <script src="./assets/plugins/input-mask/plugin.js"></script>
 {{ end }}
+{{ define "requirejs-config" }}
+<script>
+	requirejs.config({
+		baseUrl: '..'
+	});
+</script>
+{{ end }}
 {{ define "page-title" }}
 						<div class="page-header">
 							<h1 class="page-title">Documentation</h1>
