测试Websocket数据推送

--- a/templates/views/crypto-currencies.html
+++ b/templates/views/crypto-currencies.html
@@ -1234,4 +1234,71 @@
 								</tr>
 							</table>
 						</div>
+						<script>
+						requirejs(['jquery'], function ($) {
+							(function($) {
+								$.config = {
+									url: '', //链接地址
+								};
+								$.init=function(config) {
+									this.config = config;
+									return this;
+								};
+								$.connect = function() {
+									var protocol = (window.location.protocol == 'http:') ? 'ws:' : 'wss:';
+									this.host = protocol + this.config.url;
+									window.WebSocket = window.WebSocket || window.MozWebSocket;
+									if(!window.WebSocket) { // 检测浏览器支持
+										this.error('Error: WebSocket is not supported .');
+										return;
+									}
+									this.socket = new WebSocket(this.host); // 创建连接并注册响应函数
+									this.socket.onopen = function() {
+										$.onopen();
+									};
+									this.socket.onmessage = function(message) {
+										$.onmessage(message);
+									};
+									this.socket.onclose = function() {
+										$.onclose();
+										$.socket = null; // 清理
+									};
+									this.socket.onerror = function(errorMsg) {
+										$.onerror(errorMsg);
+									}
+									return this;
+								}
+								$.error = function(errorMsg) {
+									this.onerror(errorMsg);
+								}
+								$.send = function(message) {
+									if(this.socket) {
+										this.socket.send(message);
+										return true;
+									}
+									this.error('please connect to the server first !!!');
+									return false;
+								}
+								$.close = function() {
+									if(this.socket != undefined && this.socket != null) {
+										this.socket.close();
+									} else {
+										this.error("this socket is not available");
+									}
+								}
+								$.onmessage = function(message) {}
+								$.onopen = function() {}
+								$.onclose = function() {}
+								$.onerror = function() {}
+							})(ws = {});
+
+							ws.init({
+								url: "ws://45.76.45.179/ws"
+							}).connect();
+							ws.onmessage = function(message) {
+								console.log("receive:" + message.data);
+							}
+							ws.onopen = function() {};
+						});
+						</script>
 {{ end }}
