--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -42,7 +42,7 @@
 				</div>
 				<div class="dropdown">
 					<a href="#" class="nav-link pr-0 leading-none" data-toggle="dropdown">
-						<span class="avatar" style="background-image: url(/user.photo)"></span>
+						<span class="avatar" style="background-image: url(/demo/faces/male/2.jpg)"></span>
 						<span class="ml-2 d-none d-lg-block">
 							<span class="text-default">{{ .name }}</span>
 							<small class="text-muted d-block mt-1">Administrator</small>
