--- a/templates/views/docs/charts.html
+++ b/templates/views/docs/charts.html
@@ -1114,7 +1114,232 @@
 												</div>
 											</div>
 											<script>
-												require(['c3', 'd3'], function (c3, d3) {
+												require(['d3'], function (d3) {
+												});
+											</script>
+										</div>
+									</div>
+								</div>
+								{{/* chart-end */}}
+								{{/* chart-start */}}
+								<div class="card">
+									<div class="card-body">
+										<div class="text-wrap p-lg-6">
+											<div class="card">
+												<div class="card-header">
+													{{/* url */}}
+													<h3 class="card-title">Stacked bar chart - 1</h3>
+												</div>
+												<div class="card-body">
+													<div id="sbc1" style="height: auto"></div>
+												</div>
+											</div>
+											<script>
+												require(['d3'], function (d3) {
+													var svg = d3.select("#sbc1").append("svg").attr("width", 712).attr("height", 300),
+														margin = { top: 20, right: 60, bottom: 30, left: 40 },
+														width = +svg.attr("width") - margin.left - margin.right,
+														height = +svg.attr("height") - margin.top - margin.bottom,
+														g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+													var x = d3.scaleBand()
+														.rangeRound([0, width])
+														.padding(0.1)
+														.align(0.1);
+
+													var y = d3.scaleLinear()
+														.rangeRound([height, 0]);
+
+													var z = d3.scaleOrdinal()
+														.range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+
+													var stack = d3.stack()
+														.offset(d3.stackOffsetExpand);
+													
+													var dataset = d3.csv("/demo/sbc1.csv", function (data) {
+														return data;
+													});
+													dataset.then(function (data) {
+														data.sort(function (a, b) { return b[data.columns[1]] / b.total - a[data.columns[1]] / a.total; });
+														x.domain(data.map(function (d) { return d.State; }));
+														z.domain(data.columns.slice(1));
+														var serie = g.selectAll(".serie")
+															.data(stack.keys(data.columns.slice(1))(data))
+															.enter().append("g")
+															.attr("class", "serie")
+															.attr("fill", function (d) { return z(d.key); });
+
+														serie.selectAll("rect")
+															.data(function (d) { return d; })
+															.enter().append("rect")
+															.attr("x", function (d) { return x(d.data.State); })
+															.attr("y", function (d) { return y(d[1]); })
+															.attr("height", function (d) { return y(d[0]) - y(d[1]); })
+															.attr("width", x.bandwidth());
+
+														g.append("g")
+															.attr("class", "axis axis--x")
+															.attr("transform", "translate(0," + height + ")")
+															.call(d3.axisBottom(x));
+
+														g.append("g")
+															.attr("class", "axis axis--y")
+															.call(d3.axisLeft(y).ticks(10, "%"));
+
+														var legend = serie.append("g")
+															.attr("class", "legend")
+															.attr("transform", function (d) { var d = d[d.length - 1]; return "translate(" + (x(d.data.State) + x.bandwidth()) + "," + ((y(d[0]) + y(d[1])) / 2) + ")"; });
+
+														legend.append("line")
+															.attr("x1", -6)
+															.attr("x2", 6)
+															.attr("stroke", "#000");
+
+														legend.append("text")
+															.attr("x", 9)
+															.attr("dy", "0.35em")
+															.attr("fill", "#000")
+															.style("font", "10px sans-serif")
+															.text(function (d) { return d.key; });
+													});
+
+													function type(d, i, columns) {
+														for (i = 1, t = 0; i < columns.length; ++i) t += d[columns[i]] = +d[columns[i]];
+														d.total = t;
+														return d;
+													}
+												});
+											</script>
+										</div>
+									</div>
+								</div>
+								{{/* chart-end */}}
+								{{/* chart-start */}}
+								<div class="card">
+									<div class="card-body">
+										<div class="text-wrap p-lg-6">
+											<div class="card">
+												<div class="card-header">
+													{{/*
+													https://cal-heatmap.com/v2/
+													https://github.com/DKirwan/calendar-heatmap
+													*/}}
+													<h3 class="card-title">Stacked bar chart - 2</h3>
+												</div>
+												<div class="card-body">
+													<div id="sbc2" style="height: 16rem"></div>
+												</div>
+											</div>
+											<script>
+												require(['d3'], function (d3) {
+													var svg = d3.select("#sbc1").append("svg").attr("width", 712).attr("height", 300),
+														margin = { top: 20, right: 60, bottom: 30, left: 40 },
+														width = +svg.attr("width") - margin.left - margin.right,
+														height = +svg.attr("height") - margin.top - margin.bottom,
+														g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+													var x = d3.scaleBand()
+														.rangeRound([0, width])
+														.padding(0.1)
+														.align(0.1);
+
+													var y = d3.scaleLinear()
+														.rangeRound([height, 0]);
+
+													var z = d3.scaleOrdinal()
+														.range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+
+													var converter = function (d) {
+														var total = 0;
+														console.log(d);
+														// for (i = 1; i < data.columns.length; ++i)
+														// 	total += d[columns[i]] = +d[columns[i]];
+														// d.total = t;
+														return {
+															State: d.State,
+															Total: total
+														};
+													}
+													var dataset = d3.csv("/demo/sbc1.csv", function (data) {
+														return data;
+													});
+													var keys;
+													dataset.then(function (data) {
+														keys = data.columns.slice(1);
+														var c = data.map(function (d) {
+															var total = 0;
+															for (i = 1; i < data.columns.length; ++i) {
+																total += d[data.columns[i]] = +d[data.columns[i]];
+															}
+															d.total = total;
+															return {
+																State: d.State,
+																Total: total
+															};
+														});
+														return c;
+													}).then(function (data) {
+														data.sort(function (a, b) { return b.total - a.total; });
+														x.domain(data.map(function (d) { return d.State; }));
+														z.domain(keys);
+														var serie = g.selectAll(".serie")
+															.data(d3.stack().keys(keys)(data))
+															.enter().append("g")
+															.attr("class", "serie")
+															.attr("fill", function (d) { return z(d.key); });
+
+														serie.selectAll("rect")
+															.data(function (d) { console.log(d);return d; })
+															.enter().append("rect")
+															.attr("x", function (d) { return x(d.data.State); })
+															.attr("y", function (d) { return y(d[1]); })
+															.attr("height", function (d) { return y(d[0]) - y(d[1]); })
+															.attr("width", x.bandwidth());
+
+														g.append("g")
+															.attr("class", "axis axis--x")
+															.attr("transform", "translate(0," + height + ")")
+															.call(d3.axisBottom(x));
+														
+														g.append("g")
+															.attr("class", "axis axis--y")
+															.call(d3.axisLeft(y).ticks(null, "s"))
+															.append("text")
+															.attr("x", 2)
+															.attr("y", y(y.ticks().pop()) + 0.5)
+															.attr("dy", "0.32em")
+															.attr("fill", "#000")
+															.attr("font-weight", "bold")
+															.attr("text-anchor", "start")
+															.text("Population");
+														
+														var legend = g.append("g")
+															.attr("font-family", "sans-serif")
+															.attr("font-size", 10)
+															.attr("text-anchor", "end")
+															.selectAll("g")
+															.data(keys.slice().reverse())
+															.enter().append("g")
+															.attr("transform", function (d, i) { return "translate(0," + i * 20 + ")"; });
+
+														legend.append("rect")
+															.attr("x", width - 19)
+															.attr("width", 19)
+															.attr("height", 19)
+															.attr("fill", z);
+
+														legend.append("text")
+															.attr("x", width - 24)
+															.attr("y", 9.5)
+															.attr("dy", "0.32em")
+															.text(function (d) { return d; });
+													});
+
+													function type(d, i, columns) {
+														for (i = 1, t = 0; i < columns.length; ++i) t += d[columns[i]] = +d[columns[i]];
+														d.total = t;
+														return d;
+													}
 												});
 											</script>
 										</div>
