--- a/templates/views/docs/charts.html
+++ b/templates/views/docs/charts.html
@@ -1296,7 +1296,7 @@
 													// var z = d3.scaleOrdinal()
 													// 	.range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
 
-													// var dataset = d3.csv("/demo/sbc1.csv", function (data) {
+													// var dataset = d3.csv("/demo/population.csv", function (data) {
 													// 	return data;
 													// });
 													// dataset.then(function (data) {
@@ -1554,7 +1554,7 @@
 													var stack = d3.stack()
 														.offset(d3.stackOffsetExpand);
 													
-													var dataset = d3.csv("/demo/sbc1.csv", function (data) {
+													var dataset = d3.csv("/demo/population.csv", function (data) {
 														return data;
 													});
 													dataset.then(function (data) {
@@ -1640,7 +1640,7 @@
 													var z = d3.scaleOrdinal()
 														.range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
 
-													var dataset = d3.csv("/demo/sbc1.csv", function (data) {
+													var dataset = d3.csv("/demo/population.csv", function (data) {
 														return data;
 													});
 													var keys;
@@ -1758,7 +1758,7 @@
 														var stack = d3.stack()
 															.offset(d3.stackOffsetExpand);
 
-														var dataset = d3.csv("/demo/sbc1.csv", function (data) {
+														var dataset = d3.csv("/demo/population.csv", function (data) {
 															return data;
 														});
 														dataset.then(function (data) {
@@ -1826,7 +1826,7 @@
 													var z = d3.scaleOrdinal()
 														.range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
 
-													var dataset = d3.csv("/demo/sbc1.csv", function (data) {
+													var dataset = d3.csv("/demo/population.csv", function (data) {
 														return data;
 													});
 													var keys;
@@ -3259,8 +3259,38 @@
 							</div>
 						</div>
 						{{/* https://bl.ocks.org/pstuffa/1f06421d4def35778245b24e11b08ca2 */}}
-						{{/* url */}}
-						{{/* url */}}
+						{{/* https://bl.ocks.org/EE2dev/0e709563a63ddfd5c7152e3441593093/1fee4987d806f17bedc01738577fc8c2c63855a0 */}}
+						{{/* http://123.207.84.88:8008/misc21-v4.html */}}
+						{{/* http://123.207.84.88:8008/misc22-v4.html */}}
+						{{/* http://123.207.84.88:8008/misc23-v4.html */}}
+						{{/* http://123.207.84.88:8008/misc24-v4.html */}}
+						{{/* http://123.207.84.88:8008/misc25-v4.htm */}}
+						{{/* http://123.207.84.88:8008/misc32-v4.htm */}}
+						{{/* http://123.207.84.88:8008/misc33-v4.html */}}
+						{{/* http://123.207.84.88:8008/misc36-v4.html */}}
+						{{/* http://123.207.84.88:8008/misc18-v4.html */}}
+						{{/* http://123.207.84.88:8008/misc12-v4.html */}}
+						{{/* http://123.207.84.88:8008/misc6-v4.html */}}
+						{{/* http://123.207.84.88:8008/sudoku2-v4.html */}}
+						{{/* http://123.207.84.88:8008/area-chart4-v4.html */}}
+						{{/* http://123.207.84.88:8008/area-chart2-v5.html */}}
+						{{/* http://123.207.84.88:8008/bar-chart2-v4.html */}}
+						{{/* http://123.207.84.88:8008/bar-chart3-v4.html */}}
+						{{/* http://123.207.84.88:8008/line-chart10-v4.html */}}
+						{{/* http://123.207.84.88:8008/line-chart1-v4.html */}}
+						{{/* http://123.207.84.88:8008/line-chart6-v4.html */}}
+						{{/* http://123.207.84.88:8008/line-chart7-v4.html */}}
+						{{/* http://123.207.84.88:8008/radar-chart1-v4.html */}}
+						{{/* http://123.207.84.88:8008/ratio-allocation-to-a-breadcrumbeds-unburst-v4.html */}}
+						{{/* http://123.207.84.88:8008/round-line-chart-v4.html */}}
+						{{/* http://123.207.84.88:8008/rt-v4.html */}}
+						{{/* http://123.207.84.88:8008/stack-to-split-v4.html */}}
+						{{/* https://bl.ocks.org/chrisjackson4256/2ea206d19271b6026a1bcfb61daec2eb/bcd48c7d6412a5f34f65cc66e9486f241d2b5706 */}}
+						{{/* http://bl.ocks.org/santiagogaray/d613033cf9749ad97eab0b293b0127d2/6dbd1b85ed0ddbea6792fe66b9425675a2a47273 */}}
+						{{/* http://blockbuilder.org/jeremygnfsk/71f882b1ae4097b8bfe5c331d673b85a */}}
+						{{/* https://bl.ocks.org/KingOfCramers/72524a4bcc1675329debca53049613b5/8a763c7ab4d8600d84982bc87583a5e8702c7576 */}}
+						{{/* http://blockbuilder.org/erickedu85/41efef8e16621b9ea4449f78827ce6ac */}}
+						{{/* https://bl.ocks.org/mbostock/1256572 */}}
 						{{/* url */}}
 						{{/* url */}}
 						{{/* url */}}
