移除一些不需要实现的图表

--- a/templates/views/docs/charts.html
+++ b/templates/views/docs/charts.html
@@ -4379,22 +4379,36 @@
 									</div>
 								</div>
 								{{/* chart-end */}}
+								{{/* chart-start */}}
+								<div class="card">
+									<div class="card-body">
+										<div class="text-wrap p-lg-6">
+											<div class="card">
+												<div class="card-header">
+													{{/* http://blockbuilder.org/allyraza/417e4fad5cbec29b9c3a64a7a1cc1445 */}}
+													<h3 class="card-title">Realtime line chart</h3>
+												</div>
+												<div class="card-body">
+													<div id="rtc1" style="height: 300px;">
+													</div>
+												</div>
+											</div>
+											<script>
+												require(['d3'], function (d3) {
+												});
+											</script>
+										</div>
+									</div>
+								</div>
+								{{/* chart-end */}}
 							</div>
 						</div>
-						{{/* https://bl.ocks.org/pstuffa/1f06421d4def35778245b24e11b08ca2 */}}
 						{{/*
 							http://blockbuilder.org/tomshanley/42d09e832ade97b354ef268c534f5a92
 							https://www.wired.com/2013/10/tweet-bots/
 						*/}}
-						{{/* http://123.207.84.88:8008/misc12-v4.html */}}
-						{{/* http://123.207.84.88:8008/area-chart2-v5.html */}}
 						{{/* http://123.207.84.88:8008/bar-chart3-v4.html */}}
-						{{/* http://123.207.84.88:8008/line-chart1-v4.html */}}
 						{{/* http://123.207.84.88:8008/line-chart6-v4.html */}}
-						{{/* http://123.207.84.88:8008/ratio-allocation-to-a-breadcrumbeds-unburst-v4.html */}}
-						{{/* http://blockbuilder.org/allyraza/417e4fad5cbec29b9c3a64a7a1cc1445 */}}
-						{{/* http://blockbuilder.org/lorenzopub/422ea906c71f193098a15be8d0a06ed3 */}}
-						{{/* https://bl.ocks.org/mbostock/1256572 */}}
 {{ end }}
 
 
